--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -14,8 +14,7 @@ dependencies:
   cupertino_icons: ^1.0.2
 
   flutter_debouncer:
-    git:
-      url: https://github.com/syaifakmal/flutter-debouncer.git
+    path: ../
 
 dev_dependencies:
   flutter_test:
